<resources>
    <string name="app_name">Go To PC</string>
    <string name="choose_wifi">Choose Wifi</string>
    <string name="choose_app">Choose App</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="add_current_wifi">Add Current Wifi</string>
    <string name="wifi_list">Wifi list</string>
    <string name="remove">Remove</string>
    <string name="cant_get_wifi_ssid">Can\'t get Wifi SSID</string>
    <string name="require_perms">This app require some permissions to work</string>
    <string name="click_ok_to_continue">Click OK to continue</string>
    <string name="click_cancel_to_abort">Click Cancel to abort</string>
    <string name="why_location_perms">For Android 10+, location permission is needed to access Wifi information</string>
    <string name="cant_work_without_perms">Can\'t work without these permissions</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="wifi_ssid_exist">Wifi SSID exist</string>
    <string name="app_list">App list</string>
    <string name="enter_wifi_ssid">Enter Wifi SSID</string>
    <string name="add">Add</string>
    <string name="wifi_ssid_cant_be_empty">Wifi SSID can\'t be empty</string>
    <string name="please_wait">Please wait…</string>
    <string name="saving_app_list">Saving app list</string>
    <string name="getting_app_list">Getting app list</string>
    <string name="accessibility_service_label">Go To PC Accessibility Service</string>
    <string name="accessibility_service_description">Used by Go To PC to detect and get your away from selected app(We\'ll never collect your privacy)</string>
    <string name="start_or_stop_service">Start / stop service</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_save_app_list">Do you want to save the app list?</string>
    <string name="thanks_to">Thanks to:</string>
    <string name="easypermissions" translatable="false">EasyPermissions</string>
</resources>