<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_main_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_or_stop_service"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_main_choose_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_wifi"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_main_choose_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_app"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_main_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_main_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_main_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>