<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChooseWifiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_wifi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_wifi_ssid"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/button_wifi_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAllCaps="false" />
        </LinearLayout>

        <Button
            android:id="@+id/button_wifi_add_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_current_wifi"
            android:textAllCaps="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/wifi_list">

            <LinearLayout
                android:id="@+id/layout_liner_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>